# JAX-NSL

./: .gitignore  Makefile  PROJECT_STRUCTURE.md  README.md  create_jax_nsl_structure.sh  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci.yml  docs.yml
data/synthetic/: generate_data.py
docker/: Dockerfile  docker-compose.yml
docs/: conf.py
docs/source/: changelog.rst  contributing.rst  index.rst  installation.rst  quickstart.rst  tutorials.rst
docs/source/api/: autodiff.rst  core.rst  linalg.rst  models.rst  parallel.rst  training.rst  transforms.rst  utils.rst
docs/source/examples/: advanced_patterns.rst  basic_usage.rst  performance_tips.rst
docs/source/notebooks/: 01_fundamentals.rst  02_linear_algebra.rst  03_neural_networks.rst  04_training_optimization.rst  05_parallelism.rst  06_special_topics.rst  capstone_projects.rst
notebooks/01_fundamentals/: 01_arrays_and_prng.ipynb  02_autodiff_basics.ipynb  03_custom_vjp_jvp.ipynb  04_control_flow_scan.ipynb
notebooks/02_linear_algebra/: 05_matrix_ops.ipynb  06_iterative_solvers.ipynb  07_numerical_stability.ipynb
notebooks/03_neural_networks/: 08_mlp_from_scratch.ipynb  09_cnn_minimal.ipynb  10_attention_from_scratch.ipynb
notebooks/04_training_optimization/: 11_optimizers_in_jax.ipynb  12_loss_functions.ipynb  13_training_loops.ipynb
notebooks/05_parallelism/: 14_pmap_basics.ipynb  15_pjit_and_sharding.ipynb  16_collectives.ipynb
notebooks/06_special_topics/: 17_differentiable_odes.ipynb  18_probabilistic_gradients.ipynb  19_research_tricks.ipynb
notebooks/capstone_projects/: 20_physics_informed_nn.ipynb  21_large_scale_training.ipynb
src/: __init__.py
src/autodiff/: __init__.py  custom_jvp.py  custom_vjp.py  grad_jac_hess.py
src/core/: __init__.py  arrays.py  numerics.py  prng.py
src/linalg/: __init__.py  ops.py  solvers.py
src/models/: __init__.py  cnn.py  mlp.py  transformer.py
src/parallel/: __init__.py  collectives.py  pjit_utils.py  pmap_utils.py
src/training/: __init__.py  losses.py  optimizers.py  train_loop.py
src/transforms/: __init__.py  control_flow.py  jit_utils.py  scan_utils.py  vmap_utils.py
src/utils/: __init__.py  benchmarking.py  tree_utils.py
tests/: conftest.py  test_autodiff.py  test_core.py  test_linalg.py  test_models.py  test_numerics.py  test_parallel.py  test_training.py  test_transforms.py
